; ModuleID = '/home/carl/AnghaBench/freebsd/tools/regression/priv/extr_priv_settimeofday.c_priv_settimeofday_setup.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/regression/priv/extr_priv_settimeofday.c_priv_settimeofday_setup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.test = type { i32 }

@now = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [38 x i8] c"priv_settimeofday_setup: gettimeofday\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @priv_settimeofday_setup(i32 %0, i32 %1, %struct.test* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.test*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store %struct.test* %2, %struct.test** %7, align 8
  %8 = call i64 @gettimeofday(i32* @now, i32* null)
  %9 = icmp slt i64 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %3
  %11 = call i32 @warn(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %4, align 4
  br label %13

12:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %13

13:                                               ; preds = %12, %10
  %14 = load i32, i32* %4, align 4
  ret i32 %14
}

declare dso_local i64 @gettimeofday(i32*, i32*) #1

declare dso_local i32 @warn(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
